--- a/.circle-ci/config.yml
+++ b/.circle-ci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1
-job:
+jobs:
   build:
-    docker:
-      - image: cimg/node:14.10.1
-        auth: 
+    docker: 
+      - image: cimg/node:14.10.1 # the primary container, where your job's commands are run
+        auth:
           username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD 
-        steps: 
-          - checkout
-          - run: echo 'here we go again'
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+    steps:
+      - checkout # check out the code in the project directory
+      - run: echo "hello world" # run the `echo` command
